# replayt-langgraph-bridge

./: .gitignore  .handoff.md  3. Verify CI workflow runs successfully with the updated code  CHANGELOG.md  CONTRIBUTING.md  README.md  pip-audit --desc --severity-high  pyproject.toml
.github/ISSUE_TEMPLATE/: compatibility_update.md
.github/workflows/: ci.yml
I'll now output the file listings for the updated files and the handoff file.docs/: MISSION.md
docs/: API.md  BACKLOG_LANGGRAPH_CHECKPOINT_SLICE.md  CHECKPOINT_PERSISTENCE.md  DEPENDENCY_AUDIT.md  DESIGN_PRINCIPLES.md  HOSTED_DEPLOYMENT_AUTHZ.md  LOG_REDACTION.md  MISSION.md  REPLAYT_BOUNDARY_TESTS.md  REPLAYT_ECOSYSTEM_IDEA.md  STATE_PAYLOAD_VALIDATION.md  THREAT_MODEL.md
orchestrator/backlog-workflow/4542c070-ee63-4879-8044-de362331f814/phase_2/: handoff.md
path/to/: filename.js
src/replayt_langgraph_bridge/: __init__.py  bridge_log.py  graph.py  redaction.py  state_validation.py
tests/: test_bridge_functions.py  test_bridge_graph.py  test_dependency_strategy.py  test_hosted_deployment_authz_docs.py  test_log_redaction.py  test_public_api.py  test_security_threat_model.py  test_state_payload_validation.py
