[project]
name = "replayt-langgraph-bridge"
version = "0.1.0"
description = "LangGraph adapter mapping replayt workflow states to graph nodes and checkpoints: Python project using replayt; see docs for scope."
requires-python = ">=3.11"
dependencies = [
  # replayt: Initial integration target is 0.4.x series
  # Upper bound prevents automatic upgrades to breaking 0.5.x changes
  "replayt>=0.4.0,<0.5",
  
  # langgraph: Initial integration target is 1.1.x series  
  # Upper bound prevents automatic upgrades to breaking 1.2.x changes
  "langgraph>=1.1.0,<1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
